fix(highlight): increase comment contrast
Increase contrast on comments in highlight style

--- a/src/platform/highlight/_highlight-theme.scss
+++ b/src/platform/highlight/_highlight-theme.scss
@@ -12,7 +12,7 @@
 
     .hljs-comment,
     .hljs-quote {
-      color: #608b4e;
+      color: #87c36e;
     }
 
     .hljs-tag,
